--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.woslx.spring</groupId>
   <artifactId>springtutorialframework</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>springtutorialframework</name>
   <url>http://maven.apache.org</url>
