--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
   <groupId>com.woslx.spring</groupId>
   <artifactId>springtutorialframework</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>helloworld</module>
+    <module>helloworld2</module>
+    <module>03SpringConfiguration</module>
+  </modules>
   <packaging>pom</packaging>
 
   <name>springtutorialframework</name>
