--- a/04SpringBeanAutowiringXML/pom.xml
+++ b/04SpringBeanAutowiringXML/pom.xml
@@ -7,10 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>SpringConfiguration</artifactId>
+    <artifactId>04SpringBeanAutowiringXML</artifactId>
     <packaging>jar</packaging>
 
-    <name>SpringConfiguration</name>
+    <name>04SpringBeanAutowiringXML</name>
     <url>http://maven.apache.org</url>
 
     <properties>
