--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <module>02helloworld2</module>
     <module>03SpringConfiguration</module>
     <module>04SpringBeanAutowiringXML</module>
+    <module>05SpringBeanAutowiringAnnotationAutowired</module>
   </modules>
   <packaging>pom</packaging>
 
