--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>04SpringBeanAutowiringXML</module>
     <module>05SpringBeanAutowiringAnnotationAutowired</module>
     <module>06SpringCustomEvents2</module>
+    <module>07SpringProfile</module>
   </modules>
   <packaging>pom</packaging>
 
